# 1DV501-text-analysis

./: .gitignore  README.md  pyproject.toml  testchunk.txt
books/: alice-in-wonderland.txt.utf-8
src/: main.py
text_analysis/: analysis.py  book.py  main.py  plots.py  stats.py  tui.py
