[project]
name = "1DV501-text-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "readchar>=4.2.1",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["text_analysis"]

[project.scripts]
main = "text_analysis.main:main"
